fixed card title and nicknames being misaligned

--- a/src/Components/Card/PokeCard.module.scss
+++ b/src/Components/Card/PokeCard.module.scss
@@ -10,19 +10,19 @@
     background: linear-gradient(to right, rgb(133, 85, 126), rgb(70, 117, 163));
     width: 20em;
     height: 32em;
-    margin: 0 1em;
+    margin: 0 0.5em;
     border-radius: 15px;
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     flex-direction: column;
     border: white 7px solid;
-    
+
     transform-style: preserve-3d;
 
     &:hover {
       .typeTag{
-        transform: translateZ(40px);
+        transform: translateZ(55px);
       }
       .sprite img {
         &:first-of-type { 
@@ -44,8 +44,15 @@
       font-size: 2em;
       transition: all 0.5s ease-out;
       position: absolute;
-      top: 0.25em;
-      width: 100%;
+      top: 0;
+      min-width: 100%;
+      min-height: 75px;
+      display: inline-flex;
+      align-items: center;
+      text-align: center;
+      section {
+        width: 100%;
+      }
       .inlineInput input{
         cursor: pointer;
         width: 100%;
@@ -57,7 +64,7 @@
       align-items: center;
       justify-content: center;
       position: absolute;
-      top: 6em;
+      top: 6.5em;
       width: 100%;
       transform: translateX(-10);
 
@@ -115,6 +122,9 @@
         .nickname {
           font-size: 1.5em;
           color: rgb(245, 239, 214);
+          min-height: 75px;
+          display: inline-flex;
+          align-items: center;
           cursor: pointer;
           input {
             width: 100%;
@@ -138,7 +148,7 @@
               box-shadow: 6px 8px 9px 1px rgba(0, 0, 0, 0.3);
               transition: all 0.75s ease-out;
               text-transform: uppercase;
-              font-size: 10px;
+              font-size: 0.75em;
               font-weight: bold;
             }
             
